--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
   <h1>Welcome to NovaHub - Your Game Hub</h1>
   <div class="game-launcher">
     <button class="game-button" onclick="launchGame('https://1v1.lol')">1v1.lol</button>
-    <button class="game-button" onclick="launchGame('https://retrobowl.me')">Retro Bowl</button>
+    <button class="game-button" onclick="launchGame('https://retrobowl.io/')">Retro Bowl</button>
     <button class="game-button" onclick="launchGame('https://slope-game.github.io/slope/')">Slope</button>
-    <button class="game-button" onclick="launchGame('https://htmlgames.com/football-legends/')">Football Legends</button>
+    <button class="game-button" onclick="launchGame('https://poki.com/en/g/football-legends?campaign=14726801018&adgroup=126978591789&extensionid=&targetid=aud-1875460979682:kwd-297683285497&location=9029824&matchtype=e&network=g&device=c&devicemodel=&creative=594130352111&keyword=football%20legends&placement=&target=&gad_source=1&gclid=Cj0KCQjwtpLABhC7ARIsALBOCVrE66FUhshbf-k2wtT67uBJ8xbrz1CZZOR4-dPv9tOX-9g5hqZ9LxoaApHFEALw_wcB')">Football Legends</button>
     <button class="game-button" onclick="launchGame('https://flappybird.io')">Flappy Bird</button>
     <button class="game-button" onclick="launchGame('https://agar.io')">Agar.io</button>
-    <button class="game-button" onclick="launchGame('https://krunker.io')">Krunker.io</button>
-    <button class="game-button" onclick="launchGame('https://slither.io')">Slither.io</button>
+    <button class="game-button" onclick="launchGame('https://krunker.io/')">Krunker.io</button>
+    <button class="game-button" onclick="launchGame('https://slither.io/')">Slither.io</button>
     <button class="game-button" onclick="launchGame('https://tetris.com/play-tetris')">Tetris</button>
   </div>
 
